# POOP-projekat

./: README.md  actors.sql  actorscopy.mile
bibliotecke stvari/: CMakeLists.txt  Change.cpp  Change.h  Column.cpp  Column.h  Condition.cpp  Condition.h  Database.cpp  Database.h  Equals.cpp  Equals.h  MyExeptions.h  NotEquals.cpp  NotEquals.h  OrderBy.cpp  OrderBy.h  Table.cpp  Table.h  application_Database.cpp  application_Database.h  main.cpp
bibliotecke stvari/Debug od biblioteke/: bibliotekaZaBazu.exp  bibliotekaZaBazu.lib
java klase/: Begin.fxml  ControllerBegin.java  ControllerMain.java  Database.java  Main.fxml  Main.java  Table.java  uputstvo za povezivanje.txt
